dataset1235/2025-2/1955397009/users/1253623235/executions/1107611404_3455942218.log
== SUBMISSION (2025-08-21 13:44:16)
-- CODE: 
X = float(input("Qual o valor unitario do jogo?"))
Y = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))
total = (X * 8 + 45.00)
saldo = (Y - total)
print(resultado)
print(resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:18:45)
-- CODE: 
X = float(input("Qual o valor unitario do jogo? "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
total = 8 * X + 45.00
print(8 * X + 45.00)
print(Y - total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:47:10)
-- CODE: 
X = float(input("Qual o valor unitario do jogo?"))
Y = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))
total = (X * 8 + 45.00)
saldo = (Y - total)
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:46:36)
-- CODE: 
X = float(input("Qual o valor unitario do jogo?"))
Y = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))
total = (X * 8 + 45.00)
saldo = (Y - total)
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 20:21:11)
-- CODE: 
Vu = float(input(""))
Vd = float(input(""))

p = Vu*8 + 45.00
r = Vd - p

print(round(p, 1))
print(round(r, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:19:45)
-- CODE: 
X = float(input("Qual o valor unitario do jogo? "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
total = 8 * X + 45.00
print(8 * X + 45.00)
print(Y - total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:42:18)
-- CODE: 
X = float(input("Qual o valor unitario do jogo?"))
Y = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))
total = (X * 8 + 45.00)
saldo = (Y - total)
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:43:43)
-- CODE: 
X = float(input("Qual o valor unitario do jogo?"))
Y = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))
total = (X * 8 + 45.00)
saldo = (Y - total)
print(resultado)
print(resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(resultado)
          ^^^^^^^^^
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:19:08)
-- CODE: 
X = float(input("Qual o valor unitario do jogo? "))
Y = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
total = 8 * X + 45.00
print(8 * X + 45.00)
print(Y - total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
